clusters/crc-cryostat-ossm3/overlays/ossm3-istio-system/networkpolicy-istio-istiod-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-istiod-default
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istiod
      istio.io/rev: default
  ingress:
    - {}
  policyTypes:
    - Ingress
