clusters/crc-cryostat-ossm3/overlays/ossm3-istio-system/networkpolicy-istio-rev-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-rev-default
  namespace: istio-system
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              istio.io/rev: default
  policyTypes:
    - Ingress
